<resources>
    <string name="app_name">LightNews</string>
    <string name="title_activity__news">Activity_News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="category_domestic">国内新闻</string>
    <string name="category_movie">电影</string>

    <string name="category_domestic_url">feed://news.qq.com/newsgn/rss_newsgn.xml</string>
    <string name="category_movie_url">feed://ent.qq.com/movie/rss_movie.xml</string>
    <string name="title_activity_news_detail">新闻详情</string>
    <string name="title_activity_original_news">新闻原文</string>
    <string name="title_activity_navigation">首页</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_favorate_title">favorate</string>
    <string name="nav_categories_title">categories</string>
    <string name="nav_setting_title">setting</string>
    <string name="nav_users_title">Users</string>
    <string name="nav_sign_out_title">sign in/out</string>
    <string name="nav_local_news_title">local news</string>
    <string name="nav_recommend_title">recommend</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_category_check">CategoryCheckActivity</string>
    <string name="category_tag_input_hit">category tag</string>
    <string name="url_input_hint">url</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="night_mode">Night mode</string>
    <string name="data_saving">Data saving</string>
</resources>
