<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="home" android:id="@+id/nav_home" android:icon="@drawable/ic_menu_gallery"/>
        <item
                android:id="@+id/nav_favorate"
                android:icon="@android:drawable/star_big_off"
                android:title="@string/nav_favorate_title"/>
        <item
                android:id="@+id/nav_categories"
                android:icon="@android:drawable/ic_menu_sort_by_size"
                android:title="@string/nav_categories_title"/>
        <item android:title="@string/nav_recommend_title" android:id="@+id/nav_recommend"
              android:icon="?android:attr/actionModePasteDrawable"/>
        <item
                android:id="@+id/nav_categories_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_setting_title"/>
        <item
                android:id="@+id/nav_local"
                android:icon="?android:attr/actionModeCutDrawable"
                android:title="@string/nav_local_news_title"/>
    </group>

    <item android:title="@string/nav_users_title">
        <menu>
            <item
                    android:id="@+id/nav_sign"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_sign_out_title"/>
        </menu>
    </item>

</menu>
